{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 127,
  "lineage": "f9eb6325-e520-7cd0-fa3f-ab307a8cec5a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instancia_proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a81a99f5ec58529",
            "arn": "arn:aws:ec2:us-east-1:381492280631:instance/i-0dfd9e36d317e65eb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dfd9e36d317e65eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_ubuntu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04fb6fc9450b5060b",
            "private_dns": "ip-10-0-1-35.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.35",
            "public_dns": "ec2-54-197-8-163.compute-1.amazonaws.com",
            "public_ip": "54.197.8.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ca733c97d36f210d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-004003c9e8f98479f",
            "tags": {
              "Name": "instancia_proyecto_final"
            },
            "tags_all": {
              "Name": "instancia_proyecto_final"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f27b3bf3451a5bda"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_proyecto",
            "aws_subnet.subnet1_proyecto",
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492280631:internet-gateway/igw-04130b2496a47f868",
            "id": "igw-04130b2496a47f868",
            "owner_id": "381492280631",
            "tags": {
              "Name": "GW_proyecto_final"
            },
            "tags_all": {
              "Name": "GW_proyecto_final"
            },
            "vpc_id": "vpc-0f072ffe4371252c2"
          },
          "dependencies": [
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492280631:route-table/rtb-0d722b8ad18a334d5",
            "id": "rtb-0d722b8ad18a334d5",
            "owner_id": "381492280631",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04130b2496a47f868",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_proyecto_final"
            },
            "tags_all": {
              "Name": "rt_proyecto_final"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f072ffe4371252c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw_proyecto",
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_rt_proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d5375fac9248840",
            "route_table_id": "rtb-0d722b8ad18a334d5",
            "subnet_id": "subnet-004003c9e8f98479f"
          },
          "dependencies": [
            "aws_internet_gateway.gw_proyecto",
            "aws_route_table.rt_proyecto",
            "aws_subnet.subnet1_proyecto",
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492280631:security-group/sg-06fb2f2631eec33b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-06fb2f2631eec33b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "Acceso postgres",
            "name_prefix": "",
            "owner_id": "381492280631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "postgres_proyecto_final"
            },
            "tags_all": {
              "Name": "postgres_proyecto_final"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f072ffe4371252c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492280631:security-group/sg-0f27b3bf3451a5bda",
            "description": "permite el acceso ssh desde cualquier lugar",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "permite salida a cualquier ip y puerto",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f27b3bf3451a5bda",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "permite acceso al puerto 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "permite acceso al puerto 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG Acceso SSH",
            "name_prefix": "",
            "owner_id": "381492280631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_proyecto_final"
            },
            "tags_all": {
              "Name": "SG_proyecto_final"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f072ffe4371252c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1_proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492280631:subnet/subnet-004003c9e8f98479f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004003c9e8f98479f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492280631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet1_proyecto_final"
            },
            "tags_all": {
              "Name": "subnet1_proyecto_final"
            },
            "vpc_id": "vpc-0f072ffe4371252c2"
          },
          "dependencies": [
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2_proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492280631:subnet/subnet-022b7663dcb4741b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022b7663dcb4741b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492280631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet2_proyecto_final"
            },
            "tags_all": {
              "Name": "subnet2_proyecto_final"
            },
            "vpc_id": "vpc-0f072ffe4371252c2"
          },
          "dependencies": [
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3_proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492280631:subnet/subnet-0680c9e7cc7f0512c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0680c9e7cc7f0512c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492280631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet3_proyecto_final"
            },
            "tags_all": {
              "Name": "subnet3_proyecto_final"
            },
            "vpc_id": "vpc-0f072ffe4371252c2"
          },
          "dependencies": [
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet4_proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492280631:subnet/subnet-01929277c5b97a629",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01929277c5b97a629",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492280631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet4_proyecto_final"
            },
            "tags_all": {
              "Name": "subnet4_proyecto_final"
            },
            "vpc_id": "vpc-0f072ffe4371252c2"
          },
          "dependencies": [
            "aws_vpc.vpc_proyecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492280631:vpc/vpc-0f072ffe4371252c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0450ee151a37b91e1",
            "default_route_table_id": "rtb-069f7e6b45f1f2aec",
            "default_security_group_id": "sg-0a64ef8fb8f71cd9c",
            "dhcp_options_id": "dopt-05821a0049b83d47a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f072ffe4371252c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-069f7e6b45f1f2aec",
            "owner_id": "381492280631",
            "tags": {
              "Name": "VPC_proyecto_final"
            },
            "tags_all": {
              "Name": "VPC_proyecto_final"
            }
          }
        }
      ]
    }
  ]
}